spade-tests/src/snapshots/spade_tests__typeinference__impl_of_semi_constrained_params_is_not_usable_outside_constraints.snap
---
source: spade-tests/src/typeinference.rs
---
struct HasGeneric<T, S> {}

impl<S> HasGeneric<bool, S> {
    fn requires_bool(self) {}
}

fn test() {
    let g = HasGeneric::<int<8>, bool>();

    g.requires_bool()
}


error: `HasGeneric<int<8>, bool>` has no method `requires_bool`
   ┌─ testinput:10:7
   │
10 │     g.requires_bool()
   │     --^^^^^^^^^^^^^--
   │     │ │
   │     │ No such method
   │     This has type `HasGeneric<int<8>, bool>`
   │
   = help: The method exists for `HasGeneric<bool, S>`
